--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "compression": "^1.7.4",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
