--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1"
+    "mongoose": "^8.3.1",
+    "uuid": "^9.0.1"
   }
 }
