--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   }
 }
