--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,12 @@
     "express-rate-limit": "^7.2.0",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "googleapis": "^140.0.0",
     "helmet": "^7.1.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "uuid": "^9.0.1"
   }
 }
