--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,14 @@
 {
   "name": "vakances",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx nodemon --exec npx babel-node ./ssr/server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
