--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "vakances",
   "private": true,
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -15,6 +14,7 @@
     "compression": "^1.7.4",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
