--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "compression": "^1.7.4",
+    "echarts-for-react": "^3.0.2",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "react": "^18.2.0",
